enabled OOM profiler in all tools
(cherry picked from commit 43960f896ebbe9db25850a07ec10308a809ce424)
(cherry picked from commit f3732397e7747a57fed6d18b2167ae9d6c913672)
(cherry picked from commit f4c67c6eb2a6918b932e4666105580e1b5aaa535)
(cherry picked from commit 42a2c5d5471d242465f360928f969039147d47ca)